SERVER-60469 Fix bug where two optimes for being reserved for retryable deletes despite not capturing a preImage

(cherry picked from commit 3953546c3cb0afa6dcafbc02f9c732d26a3166ec)